8330156: RISC-V: Range check auipc + signed 12 imm instruction

Reviewed-by: fyang, mli, tonyp